Sema: Extend shadowing checks to when the use is in a nested closure of the definition context

The same limitation applies, so we should diagnose it instead of
allowing the reference and crashing later on in Sema or SILGen.

Fixes <rdar://problem/40600800>, <https://bugs.swift.org/browse/SR-4812>.